--- a/i18n/pt.yaml
+++ b/i18n/pt.yaml
@@ -13,5 +13,19 @@
 - id: lista_de_autores
   translation: "Lista de Autores"
 
+- id: localizacao
+  translation: "Localização"
+
+- id: endereco_correspondencia
+  translation: "Endereço para Correspondência"
+
+- id: contato
+  translation: "Contato"
+
+- id: mais_informacoes_contato
+  translation: "Mais informações de contato"
+
+- id: todos_direitos_reservados_ic
+  translation: "© Todos os direitos reservados - Instituto de Computação / UFRJ"
 
 
