adicionada a lista de artigos

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -31,3 +31,6 @@
 - id: todos_direitos_reservados_ic
   translation: "© All rights reserved - Instituto de Computação / UFRJ"
 
+- id: lista_de_artigos
+  translation: "List of Articles"
+
