--- a/i18n/pt.yaml
+++ b/i18n/pt.yaml
@@ -31,4 +31,7 @@
 - id: todos_direitos_reservados_ic
   translation: "© Todos os direitos reservados - Instituto de Computação / UFRJ"
 
+- id: lista_de_artigos
+  translation: "Lista de Artigos"
+
 
