--- a/i18n/pt.yaml
+++ b/i18n/pt.yaml
@@ -34,4 +34,7 @@
 - id: lista_de_artigos
   translation: "Lista de Artigos"
 
+- id: instituto_de_computacao
+  translation: "Instituto de Computação"
+
 
