adicionado corpo docente

--- a/i18n/pt.yaml
+++ b/i18n/pt.yaml
@@ -37,4 +37,9 @@
 - id: instituto_de_computacao
   translation: "Instituto de Computação"
 
+- id: nome
+  translation: "Nome"
+
+- id: email
+  translation: "Email"
 
