--- a/i18n/pt.yaml
+++ b/i18n/pt.yaml
@@ -26,7 +26,7 @@
   translation: "Mais informações de contato"
 
 - id: link_mais_informacoes_contato
-  translation: "/artigos/contato/"
+  translation: "/info/contato/"
 
 - id: todos_direitos_reservados_ic
   translation: "© Todos os direitos reservados - Instituto de Computação / UFRJ"
